---------------------------------------------------------------------------------------------------
Version: 0.22.5
Date: ????
  Bugfixes:
    - Fixed not being able to select rail previews with the stage move tool
---------------------------------------------------------------------------------------------------
Version: 0.22.4
Date: 2023-05-22
  Bugfixes:
    - Fix extra previews being created for train entities
---------------------------------------------------------------------------------------------------
Version: 0.22.3
Date: 2023-05-22
  Bugfixes:
    - Fix issue when blueprint pasting entities over previews.
---------------------------------------------------------------------------------------------------
Version: 0.22.2
Date: 2023-05-22
  Bugfixes:
    - Fix migration from earlier than v0.22
---------------------------------------------------------------------------------------------------
Version: 0.22.1
Date: 2023-05-21
  Changes:
    - When creating a new stage, all needed chunks will be loaded in advance.
  Optimizations:
    - Significantly improved performance of pasting large blueprints.
  Bugfixes:
    - Fixed issue occuring when... *inhales* pasting a blueprint, flipped, containing curved rails, facing in a leftward direction.
---------------------------------------------------------------------------------------------------
Version: 0.22.0
Date: 2023-05-03
  Features:
    - Added a "force-delete" custom input, which allows mining entities even if they are not in the current stage.
  Changes:
    - Changed the initial number of stages for new builds to 3.
    - Removed rarely used "go to next notable stage" custom input in favor of "go to entity's first stage" custom input.
---------------------------------------------------------------------------------------------------
Version: 0.21.0
Date: 2023-04-29
  Features: